k8s-app/deployment-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: quiz-app-db
  name: quiz-app-db
  namespace: practica
spec:
  volumeClaimTemplates:
  - metadata:
      name: db
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: sv-pv
      resources:
        requests:
          storage: 1Gi
  serviceName: "quiz-app-service"
  replicas: 1
  selector:
    matchLabels:
      app: quiz-app-db
  template:
    metadata:
      labels:
        app: quiz-app-db
    spec:
      containers:
      - image: mongo:6.0.3
        volumeMounts:
        - mountPath: /data/db
          name: db
        name: mongo
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
        ports:
        - containerPort: 27017
