k8s-app/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quiz-app-ingress
  namespace: practica
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: 10-102-182-15.nip.io
    http:
      paths:
      - path: '/'
        pathType: Prefix
        backend:
          service:
            name: quiz-app-serviceapp
            port:
              number: 5000
